--- a/index.html
+++ b/index.html
@@ -7,14 +7,89 @@
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <nav class="nav-container">
+            <h1 class="nav-title">Ma<span class="r">r</span>y</h1>
+            <ul class="ul-items">
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire Me</button></li>
 
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h4 class="banner-greedings">
+                    Hi, I am
+                </h4>
+                <h1 class="banner-title">
+                    Mary Hardy
+                </h1>
+                <p class="banner-content">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="banner-profile-pic" src="/images/hardy.png" alt="">
+        </div>
     </header>
     <main>
+        <section class="about-container">
+            <div>
+                <h3>About Me</h3>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            </div>
+            <div class="about-ditals">
+                <div class="about-ditals-part">
+                    <p>Name:</p>
+                    <h5>Mary Hardy</h5>
+                </div>
+                <div class="about-ditals-part">
+                    <p>Email:</p>
+                    <h5>info@gmail.com</h5>
+                </div>
+                <div class="about-ditals-part">
+                    <p>Date of birth:</p>
+                    <h5>11 November 1987</h5>
+                </div>
+                <div class="about-ditals-part">
+                    <p>From:</p>
+                    <h5>Los Angeles, USA</h5>
+                </div>
+            </div>
+        </section>
+
+        <section class="skills-section">
+            <div class="skill-content">
+                <h4>What I do</h4>
+                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="/images/icons/js.png" alt="">
+                    <h6>Vanilla JavaScript</h6>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/react.png" alt="">
+                    <h6>React</h6>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/nodejs.png" alt="">
+                    <h6>Node.js</h6>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/mongo.png" alt="">
+                    <h6>MongoDB</h6>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
