--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 </h1>
                 <p class="banner-content">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn2-primary">Contact</button>
             </div>
-            <img class="banner-profile-pic" src="/images/hardy.png" alt="">
+            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
         </div>
     </header>
     <main>
@@ -65,31 +65,104 @@
             </div>
             <div class="skill-container">
                 <div class="skill">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="./images/icons/js.png" alt="">
                     <h6>Vanilla JavaScript</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/react.png" alt="">
+                    <img src="./images/icons/react.png" alt="">
                     <h6>React</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/nodejs.png" alt="">
+                    <img src="./images/icons/nodejs.png" alt="">
                     <h6>Node.js</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/mongo.png" alt="">
+                    <img src="./images/icons/mongo.png" alt="">
                     <h6>MongoDB</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
 
-    </main>
-    <footer>
+        <section class="resume-container">
+            <h3 class="resume-container-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                <div class="educstion-section">
+                    <h4 class="resume-content-headtitle">My Education</h4>
+                    <div>
+                        <h4 class="resume-content-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-content-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="resume-content-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-content-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="resume-content-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-content-subtitle">Harvard University / 2015 - 2017</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="exprience-section">
+                    <h4 class="resume-content-headtitle">My Experience</h4>
+                    <div>
+                        <h4 class="resume-content-title">Sr. Font End Developer</h4>
+                        <h5 class="resume-content-subtitle">Apple Inc / 2020 - Current</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="resume-content-title">Jr. Font End Developer</h4>
+                        <h5 class="resume-content-subtitle">Dribbble Inc / 2018 - 2022</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h4 class="resume-content-title">HTML Developer</h4>
+                        <h5 class="resume-content-subtitle">Adobe Inc / 2017 - 2018</h5>
+                        <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+           <div class="btn-dowonload">
+            <button class="btn-primary">
+                Download CV
+            </button>
+           </div>
+        </section>
 
+
+    </main>
+    <footer >
+        <div >
+            <h4 class="foot-subtitle">Lets Connect</h4>
+            <p class="foot-content">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+           <div>
+            <a href="" alt=""> <img src="./images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="./images/icons/insta.png" alt=""></a>
+           </div>
+        </div>
+        <form action="">
+            <h4 class="foot-subtitle">Let’s Message me</h4>
+            <input class="form-input" type="text" placeholder="Your Name">
+            <input class="form-input" type="email" name="" id="" placeholder="Your Email">
+            <textarea name="" id="">Message</textarea>
+            <button class="btn-primary">Submit</button>
+        </form>
     </footer>
     
 </body>
