--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="btn-primary">Download CV</button>
                 <button class="btn2-primary">Contact</button>
             </div>
-            <img class="banner-profile-pic" src="./images/hardy.png" alt="">
+            <img class="banner-profile-pic" src="../images/hardy.png" alt="">
         </div>
     </header>
     <main>
@@ -65,22 +65,22 @@
             </div>
             <div class="skill-container">
                 <div class="skill">
-                    <img src="./images/icons/js.png" alt="">
+                    <img src="../images/icons/js.png" alt="">
                     <h6>Vanilla JavaScript</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="./images/icons/react.png" alt="">
+                    <img src="../images/icons/react.png" alt="">
                     <h6>React</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="./images/icons/nodejs.png" alt="">
+                    <img src="../images/icons/nodejs.png" alt="">
                     <h6>Node.js</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="./images/icons/mongo.png" alt="">
+                    <img src="../images/icons/mongo.png" alt="">
                     <h6>MongoDB</h6>
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
@@ -151,9 +151,9 @@
             <h4 class="foot-subtitle">Lets Connect</h4>
             <p class="foot-content">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
            <div>
-            <a href="" alt=""> <img src="./images/icons/facebook.png" alt=""></a>
-            <a href=""><img src="./images/icons/twitter.png" alt=""></a>
-            <a href=""><img src="./images/icons/insta.png" alt=""></a>
+            <a href="" alt=""> <img src="../images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="../images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="../images/icons/insta.png" alt=""></a>
            </div>
         </div>
         <form action="">
